--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,15 +4,19 @@
     tools:context="com.example.androidmenutest.app.MainActivity" >
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/item_BTSelect"
         android:orderInCategory="100"
-        android:title="@string/menu_item1"
+        android:title="@string/menu_item_BTSelect" />
+    <item
+        android:id="@+id/item_connect"
+        android:orderInCategory="101"
+        android:title="@string/menu_item_connect"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/item2"
+        android:id="@+id/item_disconnect"
         android:orderInCategory="110"
-        android:title="@string/menu_item2"
+        android:title="@string/menu_item_disconnect"
         app:showAsAction="never" />
 
 </menu>
