--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,6 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="152dp"
-        android:layout_height="72dp"
-        android:layout_marginBottom="20dp"
-        android:text="発射"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/textViewMessage"
         android:layout_width="377dp"
@@ -54,14 +42,13 @@
         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/textJoystickArea"
+        android:id="@+id/tvJoystickArea"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:background="#88ff"
-        android:text="TextView"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,16 +59,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/button" />
+        app:layout_constraintStart_toStartOf="@+id/tvJoystickArea"
+        app:layout_constraintTop_toBottomOf="@+id/tvJoystickArea" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="93dp"
         android:layout_height="44dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/tvJoystickArea"
+        app:layout_constraintTop_toBottomOf="@+id/tvJoystickArea" />
 
     <TextView
         android:id="@+id/textView3"
@@ -90,10 +76,26 @@
 
         android:background="#ffffff"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="@+id/textJoystickArea"
+        app:layout_constraintBottom_toBottomOf="@+id/tvJoystickArea"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textJoystickArea"
-        app:layout_constraintTop_toTopOf="@+id/textJoystickArea" />
+        app:layout_constraintStart_toStartOf="@+id/tvJoystickArea"
+        app:layout_constraintTop_toTopOf="@+id/tvJoystickArea" />
+
+    <TextView
+        android:id="@+id/tvShootingArea"
+        android:layout_width="150dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="36dp"
+        android:background="#ff0000"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="発射"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
